<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagingActivity">

    <TextView
        android:id="@+id/hospitalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:background="#EEEEEE" />

    <!-- Chat Messages Area -->
    <LinearLayout
        android:id="@+id/messageArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/hospitalName"
        android:layout_above="@id/messageInputBar"
        android:orientation="vertical"
        android:padding="16dp">
    </LinearLayout>


    <!-- Input Field and Buttons -->
    <LinearLayout
        android:id="@+id/messageInputBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@android:color/white"
        android:elevation="8dp">

        <ImageButton
            android:id="@+id/attachmentButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/attachment"
            android:contentDescription="@string/attach"
            android:scaleType="centerInside"
            android:onClick="showAttachmentOptions" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:hint="@string/type_a_message"
            android:inputType="textMultiLine"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorHint" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_send"
            android:contentDescription="@string/send"
            android:textColor="@android:color/white"/>

        <ImageButton
            android:id="@+id/voiceMessageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_btn_speak_now"
            android:contentDescription="@string/voice_message" />


    </LinearLayout>


</RelativeLayout>
